manifests/media-apps/tautulli/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tautulli
  namespace: media-apps
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "8181"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "8181"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: maintainerr
      toPorts:
        - ports:
            - port: "8181"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: overseerr
      toPorts:
        - ports:
            - port: "8181"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
